Bugzilla bug #42900: implement timeout for PR_Connect.